# gcrypter

./: .gitignore  CHANGELOG.md  MANIFEST  README.md  setup.cfg  setup.py
gcrypter/: __init__.py  decrypt.py  encrypt.py
src/: update_package.sh  upload_package.sh
tests/: enc_test.py  main_test.py
