[metadata]
name = gcrypter
version = 0.4
author = Nurul-GC
author_email = nuruldecarvalhol@gmail.com
description = Encryption algorithm based on bytes and their correspondent numbers to encode strings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nurul-GC/gcrypter
project_urls =
  Bug Tracker = https://github.com/Nurul-GC/gcrypter/issues
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Operating System :: OS Independent

[options]
python_requires = >=3.6

